--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"bcryptjs": "^2.4.3",
 		"concurrently": "^8.2.2",
 		"cookie-parser": "^1.4.6",
-		"dotenv": "^16.4.1",
+		"dotenv": "^16.4.5",
+		"env": "^0.0.2",
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.1.1",
